Fixed bug where text inside pads can overflow.

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,9 +79,11 @@ body {
 .pads__pad .note {
     flex: 1;
     text-align: left;
+    float: left;
 }
 .pads__pad .key {
     text-align: right;
+    float: right;
 }
 
 .pads__pad.active {
